[gd_scene load_steps=3 format=3 uid="uid://b8dmmmr5425fw"]

[ext_resource type="Script" path="res://UI/gongxutable/gongxu_list.gd" id="1_6oedq"]
[ext_resource type="PackedScene" uid="uid://ctrx77k5b168v" path="res://UI/gongxutable/gongxu_item.tscn" id="2_re6vg"]

[node name="工序管理" type="VBoxContainer"]

[node name="添加工艺" type="Button" parent="."]
layout_mode = 2
text = "添加工序"

[node name="AddGongxuDialog" type="AcceptDialog" parent="."]
initial_position = 2
title = "添加工艺"
size = Vector2i(362, 193)

[node name="VBoxContainer" type="VBoxContainer" parent="AddGongxuDialog"]
custom_minimum_size = Vector2(0, 50)
anchors_preset = 10
anchor_right = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 144.0
grow_horizontal = 2

[node name="Name" type="HBoxContainer" parent="AddGongxuDialog/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Name" type="Label" parent="AddGongxuDialog/VBoxContainer/Name"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "工序名称:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NameEdit" type="LineEdit" parent="AddGongxuDialog/VBoxContainer/Name"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "请输入名称"

[node name="Content" type="HBoxContainer" parent="AddGongxuDialog/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Content" type="Label" parent="AddGongxuDialog/VBoxContainer/Content"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "工序内容:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContentEdit" type="LineEdit" parent="AddGongxuDialog/VBoxContainer/Content"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "请输入"

[node name="Demand" type="HBoxContainer" parent="AddGongxuDialog/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Demand" type="Label" parent="AddGongxuDialog/VBoxContainer/Demand"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "技术要求:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DemandEdit" type="LineEdit" parent="AddGongxuDialog/VBoxContainer/Demand"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "请输入"

[node name="Time" type="HBoxContainer" parent="AddGongxuDialog/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Time" type="Label" parent="AddGongxuDialog/VBoxContainer/Time"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "工时定额:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimeEdit" type="LineEdit" parent="AddGongxuDialog/VBoxContainer/Time"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "请输入"

[node name="Header" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="number" type="Label" parent="Header"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "序号"
horizontal_alignment = 1
vertical_alignment = 1

[node name="name" type="Label" parent="Header"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "工艺名称"
horizontal_alignment = 1
vertical_alignment = 1

[node name="time" type="Label" parent="Header"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "工时定额"
horizontal_alignment = 1
vertical_alignment = 1

[node name="content" type="Label" parent="Header"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "工艺内容"
horizontal_alignment = 1
vertical_alignment = 1

[node name="demand" type="Label" parent="Header"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "技术要求"
horizontal_alignment = 1
vertical_alignment = 1

[node name="operation" type="Label" parent="Header"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "操作"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GongxuListScroll" type="ScrollContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="gongxuList" type="VBoxContainer" parent="GongxuListScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_6oedq")

[node name="gongxuItem" parent="GongxuListScroll/gongxuList" instance=ExtResource("2_re6vg")]
layout_mode = 2

[connection signal="pressed" from="添加工艺" to="GongxuListScroll/gongxuList" method="_on__pressed"]
[connection signal="confirmed" from="AddGongxuDialog" to="GongxuListScroll/gongxuList" method="_on_add_gongxu_dialog_confirmed"]
